# flask-htmx-tailwind

./: .gitignore  README.md  app.py  package.json  pnpm-lock.yaml  pyproject.toml  tailwind.config.js
templates/: button.html  index.html
